# switch

./: .gitignore  README.md  meson.build  meson.options
docs/: README.md  modules.md  usage.md
modules/: editor.sh  java.sh  kernel.sh  python.sh
src/: config.c  config.h  main.c  module.c  module.h  utils.c  utils.h
